--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,15 @@
         android:roundIcon="@drawable/acm"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".ForgotPassword" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".DisplayEvents" />
         <activity android:name=".DisplayPastEvents" />
         <activity
             android:name=".SplashScreen"
             android:theme="@style/AppTheme.Splash">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
