--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,13 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     //implementation 'com.android.support:design:28.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    def htextview_version = "0.1.6"
+// as 3.0 use implementation
+    implementation 'hanks.xyz:htextview-library:0.1.3'
+    implementation "com.hanks:htextview-base:$htextview_version"
+    implementation "com.hanks:htextview-line:$htextview_version"
+    implementation "com.hanks:htextview-typer:$htextview_version"
+    implementation "com.hanks:htextview-scale:$htextview_version"
 
 
     def nav_version = "2.3.0-alpha06"
