--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     //implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     //implementation 'com.android.support:design:28.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     def htextview_version = "0.1.6"
