--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     //implementation 'com.android.support:design:28.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.synnapps:carouselview:0.1.5'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     def htextview_version = "0.1.6"
 // as 3.0 use implementation
     implementation 'hanks.xyz:htextview-library:0.1.3'
